--- a/movie_project/login&signup/styles.css
+++ b/movie_project/login&signup/styles.css
@@ -26,7 +26,7 @@ body {
 
 h2 {
     margin-bottom: 20px;
-    color: #4CAF50;
+    color:  #007BFF;
 }
 
 .form-group {
@@ -50,14 +50,14 @@ input {
 
 input:focus {
     outline: none;
-    border-color: #4CAF50;
+    border-color: #5094dd;
 }
 
 .btn {
     display: block;
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #007BFF;
     color: white;
     border: none;
     border-radius: 4px;
@@ -66,7 +66,7 @@ input:focus {
 }
 
 .btn:hover {
-    background-color: #45a049;
+    background-color: #4a84c2;
 }
 
 p {
@@ -75,7 +75,7 @@ p {
 }
 
 a {
-    color: #4CAF50;
+    color:  #007BFF;
     text-decoration: none;
 }
 
